--- a/src/main/webapp/content/scss/_bootstrap-variables.scss
+++ b/src/main/webapp/content/scss/_bootstrap-variables.scss
@@ -8,7 +8,7 @@
 // Colors:
 // Grayscale and brand colors for use across Bootstrap.
 
-$primary: #3e8acc;
+$primary: black;
 $success: #28a745;
 $info: #17a2b8;
 $warning: #ffc107;
